IPHONE ISSUE FIX

--- a/career.html
+++ b/career.html
@@ -6,15 +6,15 @@
 <meta charset="UTF-8">
 <meta property="og:title" content="விஷ்ணுபீடியா">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
-<meta property="og:image" content="LOGO\VISHNUPEDIA1.jpg">
+<meta property="og:image" content="LOGO/VISHNUPEDIA1.jpg">
 <meta property="og:image:width" content="1080">
 <meta property="og:image:height" content="1080">
 <meta property="og:url" content="https://vishnupedia.github.io/tamil/">
-<meta property="og:type" content="https://vishnupedia.github.io/tamil/">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta property="og:type" content="website">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-
-<link rel="icon" href="LOGO\FAVICON.ico" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="LOGO/FAVICON.png">
+<link rel="icon" href="LOGO/FAVICON.ico" type="image/x-icon">
 
 
 <style>
@@ -241,13 +241,13 @@ table.FULL {border-spacing: 10px;}
 
 <nav>
 <ul class="menu">
-<li> <a href="index.html"> <img src="MENU ICONS\ABOUT.gif" alt="ABOUT" draggable="false" > <span><b>அறிமுகம்</b></span></a> </li>
+<li> <a href="index.html"> <img src="MENU ICONS/ABOUT.gif" alt="ABOUT" draggable="false" > <span><b>அறிமுகம்</b></span></a> </li>
 &nbsp;
-<li> <a href="knowledge.html"> <img src="MENU ICONS\KNOWLEDGE.gif" alt="KNOWLEDGE" draggable="false" > <span><b>அறிவும்  &nbsp; திறனும்</b></span></a> </li>
+<li> <a href="knowledge.html"> <img src="MENU ICONS/KNOWLEDGE.gif" alt="KNOWLEDGE" draggable="false" > <span><b>அறிவும்  &nbsp; திறனும்</b></span></a> </li>
 &nbsp;
-<li> <a href=" "> <img src="MENU ICONS\CAREER.gif" alt="CAREER" draggable="false" > <span><b>அனுபவம்</b></span></a> </li>
+<li> <a href=" "> <img src="MENU ICONS/CAREER.gif" alt="CAREER" draggable="false" > <span><b>அனுபவம்</b></span></a> </li>
 &nbsp;
-<li> <a href="gallery.html"> <img src="MENU ICONS\GALLERY.gif" alt="GALLERY" draggable="false" > <span><b>புகைப்படங்கள்</b></span></a> </li>        
+<li> <a href="gallery.html"> <img src="MENU ICONS/GALLERY.gif" alt="GALLERY" draggable="false" > <span><b>புகைப்படங்கள்</b></span></a> </li>        
 </ul>
 </nav>
 
@@ -262,8 +262,8 @@ table.FULL {border-spacing: 10px;}
 </div>
 
 <div class="tabcontainer">
-<button id="defaultOpen" class="tablink tablink-full" onclick="openPage('FULLTIME', this)"><b><img class="BUTTON" src="TABBUTTONICONS\FULLTIMEJOB.gif" draggable="false" width="40px" height="40px"> <br> முழு நேர வேலை அனுபவம்</b></button>
-<button class="tablink tablink-part" onclick="openPage('PARTTIME', this)"><img class="BUTTON" src="TABBUTTONICONS\PARTTIMEJOB.gif" draggable="false" width="40px" height="40px"> <br>  <b>பகுதிநேர வேலை அனுபவம் </b></button>
+<button id="defaultOpen" class="tablink tablink-full" onclick="openPage('FULLTIME', this)"><b><img class="BUTTON" src="TABBUTTONICONS/FULLTIMEJOB.gif" draggable="false" width="40px" height="40px"> <br> முழு நேர வேலை அனுபவம்</b></button>
+<button class="tablink tablink-part" onclick="openPage('PARTTIME', this)"><img class="BUTTON" src="TABBUTTONICONS/PARTTIMEJOB.gif" draggable="false" width="40px" height="40px"> <br>  <b>பகுதிநேர வேலை அனுபவம் </b></button>
 </div>
 
 
@@ -290,14 +290,14 @@ table.FULL {border-spacing: 10px;}
 
 <div id="FULLTIME" class="tabcontent">
 
-<img class="TABICON" src="TABS\OFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS\OFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: right;"><br><br><br>
+<img class="TABICON" src="TABS/OFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS/OFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: right;"><br><br><br>
 &nbsp;&nbsp;<center><h class="h11"><b>என் &nbsp;முழு &nbsp;நேர &nbsp;வேலை &nbsp;அனுபவம்</b></h></center>&nbsp;&nbsp;
     
 <br>
 <br>
 
 <center>
-<img src="JOB EXPERIENCE\VTG.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/VTG.png" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> ZENfra&nbsp;-&nbsp;Virtual&nbsp;Tech&nbsp;Gurus </h><br>
 <h class="h22"><b> தரவு &nbsp;மற்றும் &nbsp;வணிக &nbsp;பகுப்பாய்வாளர்</b></h><br>
 <p class="h23"> ஏப்ரல் &nbsp;2023 &nbsp;- &nbsp;ஆகஸ்ட் &nbsp;2024 </p><br>
@@ -310,19 +310,19 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS\DATACLEANSING.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\MARKETANALYSIS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\WEBMANAGE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\CONTENTWRITING.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\DOCUMENTATION.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\TESTING.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS\EXCEL.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\INTERNETDATAFETCH.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\LEADGEN.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\VIDEOCREATE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\COMPETITORANALYSIS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\PACKAGEMANAGE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\PRODANALYSIS.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/DATACLEANSING.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MARKETANALYSIS.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/WEBMANAGE.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/CONTENTWRITING.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/DOCUMENTATION.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/TESTING.gif" draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/EXCEL.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/INTERNETDATAFETCH.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/LEADGEN.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/VIDEOCREATE.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/COMPETITORANALYSIS.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PACKAGEMANAGE.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PRODANALYSIS.gif" draggable="false" height="150px" width="150px" >
 </div>
 </div>
 
@@ -508,7 +508,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 
 <center>
-<img src="JOB EXPERIENCE\SANSYS.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/SANSYS.png" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> Sansys&nbsp;Business&nbsp;Solutions </h><br>
 <h class="h22"><b> ஃப்ரீலான்ஸ் &nbsp;உள்ளடக்க &nbsp;எழுத்தாளர்</b></h><br>
 <p class="h23"> டிசம்பர் &nbsp;2022 &nbsp;- &nbsp;மார்ச் &nbsp;2023 &nbsp;(&nbsp;4 &nbsp;மாதங்கள்&nbsp;)  </p><br>
@@ -521,12 +521,12 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS\BLOG.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\ARTICLE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\PRESS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\CASESTUDY.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\PRODFEAT.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\WEBCONT.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/BLOG.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/ARTICLE.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PRESS.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/CASESTUDY.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PRODFEAT.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/WEBCONT.gif" draggable="false" height="150px" width="150px" >
 </div>
 </div>
   
@@ -626,7 +626,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 
 <center>
-<img src="JOB EXPERIENCE\CDS.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/CDS.png" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> CAP &nbsp;Digisoft &nbsp;Solutions, &nbsp;Inc</h><br>
 <h class="h22"><b> தரவு &nbsp;மற்றும் &nbsp;ஆவண &nbsp;ஆய்வாளர்</b></h><br>
 <p class="h23"> ஆகஸ்ட் &nbsp;2021 &nbsp;- &nbsp;அக்டோபர் &nbsp;2022 &nbsp;(&nbsp;1 வருடம் &nbsp;3 மாதங்கள்&nbsp;) </p><br>
@@ -639,13 +639,13 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS\EXCEL.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS\DATACLEANSING.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS\LEADGEN.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS\MARKETING.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS\MR.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS\ES.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS\MEDBILL.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/EXCEL.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/DATACLEANSING.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/LEADGEN.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/MARKETING.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/MR.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/ES.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/MEDBILL.gif" draggable="false" height="150px" width="150px" >   
 </div>
 </div>
 
@@ -743,7 +743,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 
 <center>
-<img src="JOB EXPERIENCE\PSG.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/PSG.png" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> PSG &nbsp;Hospital </h><br>
 <h class="h22"><b> மருந்தகம் &nbsp;மற்றும் &nbsp;மருத்துவ &nbsp;பதிவு &nbsp;உதவியாளர்</b></h><br>
 <p class="h23"> (2017 – 2018) </p><br>
@@ -756,13 +756,13 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS\DRUGS.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS\MEDEQUIP1.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\MEDEQUIP2.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\MEDEQUIP3.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS\MEDBILL.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS\ES.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS\MRHARD.gif" draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/DRUGS.gif" draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/MEDEQUIP1.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MEDEQUIP2.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MEDEQUIP3.gif" draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/MEDBILL.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/ES.gif" draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/MRHARD.gif" draggable="false" height="150px" width="150px" > 
 
 </div>
 </div>
@@ -861,7 +861,7 @@ table.FULL {border-spacing: 10px;}
 
 <div id="PARTTIME" class="tabcontent">
 
-<img class="TABICON" src="TABS\UNOFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS\UNOFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: right; transform: rotateY(180deg);"><br><br><br>
+<img class="TABICON" src="TABS/UNOFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS/UNOFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: right; transform: rotateY(180deg);"><br><br><br>
 &nbsp;&nbsp;<center><h class="h12"><b>என் &nbsp;பகுதிநேர &nbsp;வேலை &nbsp;அனுபவம்  </b></h></center>&nbsp;&nbsp;
 <br>
 <br>
@@ -872,7 +872,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\ELECTRICALSWITCHASSEMBLER.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/ELECTRICALSWITCHASSEMBLER.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> மின் &nbsp;சுவிட்ச் &nbsp;அசெம்பிளர்  </h><br>
 <br>
 <br>
@@ -887,7 +887,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\TUTOR.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/TUTOR.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> பயிற்சி &nbsp;ஆசிரியர் </h><br>
 <br>
 <br>
@@ -905,7 +905,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\FOOD DELIVERY MAN.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/FOOD DELIVERY MAN.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> உணவு &nbsp;விநியோக &nbsp;ஊழியர்  </h><br>
 <br>
 <br>
@@ -920,7 +920,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\BUILDING CONSTRUCTION SUPERVISOR.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/BUILDING CONSTRUCTION SUPERVISOR.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> கட்டிட &nbsp;மேற்பார்வையாளர்  </h><br>
 <br>
 <br>
@@ -1000,7 +1000,7 @@ table.FULL {border-spacing: 10px;}
 </div>        
 
 <div class="center-content">
-<center><img class="FLOGOIMG" src="LOGO\VISHNUPEDIA LOGO.png" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
+<center><img class="FLOGOIMG" src="LOGO/VISHNUPEDIA LOGO.png" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
 </div>
 
 <div class="right-content">  
@@ -1009,13 +1009,13 @@ table.FULL {border-spacing: 10px;}
 <center>
 <br>
 <ul class="Connect">
-<li style="display: inline-block; margin-right: 10px;"> <a href="mailto:vishnupedia1999@gmail.com"> <img class="CONIMG" src="SOCIAL MEDIA\MAIL.gif" width="75" height="75" alt="EMAIL"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="mailto:vishnupedia1999@gmail.com"> <img class="CONIMG" src="SOCIAL MEDIA/MAIL.gif" width="75" height="75" alt="EMAIL"> </a> </li>
 &nbsp;
-<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.linkedin.com/in/rvkadventurer1221/"> <img class="CONIMG" src="SOCIAL MEDIA\LINKEDIN.gif" width="75" height="75" alt="LINKEDIN"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.linkedin.com/in/rvkadventurer1221/"> <img class="CONIMG" src="SOCIAL MEDIA/LINKEDIN.gif" width="75" height="75" alt="LINKEDIN"> </a> </li>
 &nbsp;
-<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.instagram.com/rvk_cyclist_adventurer_lovedog/?hl=en"> <img class="CONIMG" src="SOCIAL MEDIA\INSTAGRAM.gif" width="75" height="75" alt="INSTAGRAM"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.instagram.com/rvk_cyclist_adventurer_lovedog/?hl=en"> <img class="CONIMG" src="SOCIAL MEDIA/INSTAGRAM.gif" width="75" height="75" alt="INSTAGRAM"> </a> </li>
 &nbsp;
-<li style="display: inline-block; margin-right: 10px;"> <a href="https://m.facebook.com/profile.php?eav=AfaXkPNZkofAnD_7vEQzmJkzrhno69WrpxTdpJslfbg7rVHL2r0tpUcAbvwDhDP5hf8&paipv=0"> <img class="CONIMG" src="SOCIAL MEDIA\FACEBOOK.gif" width="75" height="75" alt="FACEBOOK"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="https://m.facebook.com/profile.php?eav=AfaXkPNZkofAnD_7vEQzmJkzrhno69WrpxTdpJslfbg7rVHL2r0tpUcAbvwDhDP5hf8&paipv=0"> <img class="CONIMG" src="SOCIAL MEDIA/FACEBOOK.gif" width="75" height="75" alt="FACEBOOK"> </a> </li>
 </ul>
 </center>
 </div>
