--- a/gallery.html
+++ b/gallery.html
@@ -6,15 +6,15 @@
 <meta charset="UTF-8">
 <meta property="og:title" content="விஷ்ணுபீடியா">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
-<meta property="og:image" content="LOGO\VISHNUPEDIA1.jpg">
+<meta property="og:image" content="LOGO/VISHNUPEDIA1.jpg">
 <meta property="og:image:width" content="1080">
 <meta property="og:image:height" content="1080">
 <meta property="og:url" content="https://vishnupedia.github.io/tamil/">
-<meta property="og:type" content="https://vishnupedia.github.io/tamil/">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta property="og:type" content="website">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-
-<link rel="icon" href="LOGO\FAVICON.ico" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="LOGO/FAVICON.png">
+<link rel="icon" href="LOGO/FAVICON.ico" type="image/x-icon">
 
 
 <style>
@@ -229,13 +229,13 @@ p9 { font-size: 12px; color: #ffffff; margin: 0;}
 
 <nav>
 <ul class="menu">
-<li> <a href="index.html"> <img src="MENU ICONS\ABOUT.gif" alt="ABOUT" draggable="false" > <span><b>அறிமுகம்</b></span></a> </li>
+<li> <a href="index.html"> <img src="MENU ICONS/ABOUT.gif" alt="ABOUT" draggable="false" > <span><b>அறிமுகம்</b></span></a> </li>
 &nbsp;
-<li> <a href="knowledge.html"> <img src="MENU ICONS\KNOWLEDGE.gif" alt="KNOWLEDGE" draggable="false" > <span><b>அறிவும் &nbsp; திறனும்</b></span></a> </li>
+<li> <a href="knowledge.html"> <img src="MENU ICONS/KNOWLEDGE.gif" alt="KNOWLEDGE" draggable="false" > <span><b>அறிவும் &nbsp; திறனும்</b></span></a> </li>
 &nbsp;
-<li> <a href="career.html"> <img src="MENU ICONS\CAREER.gif" alt="CAREER" draggable="false" > <span><b>அனுபவம்</b></span></a> </li>
+<li> <a href="career.html"> <img src="MENU ICONS/CAREER.gif" alt="CAREER" draggable="false" > <span><b>அனுபவம்</b></span></a> </li>
 &nbsp;
-<li> <a href=" "> <img src="MENU ICONS\GALLERY.gif" alt="GALLERY" draggable="false" > <span><b>புகைப்படங்கள்</b></span></a> </li>        
+<li> <a href=" "> <img src="MENU ICONS/GALLERY.gif" alt="GALLERY" draggable="false" > <span><b>புகைப்படங்கள்</b></span></a> </li>        
 </ul>
 </nav>
 
@@ -253,7 +253,7 @@ p9 { font-size: 12px; color: #ffffff; margin: 0;}
 <br>
 <br>
 
-&nbsp;&nbsp;&nbsp;<img class="TABICON" src="TABS\GALLERYCHILD.png" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS\GALLERYADULT.png" draggable="false" width="140px" height="140px" style="float: right;">&nbsp;&nbsp;&nbsp;<br><br><br>
+&nbsp;&nbsp;&nbsp;<img class="TABICON" src="TABS/GALLERYCHILD.png" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS/GALLERYADULT.png" draggable="false" width="140px" height="140px" style="float: right;">&nbsp;&nbsp;&nbsp;<br><br><br>
 &nbsp;&nbsp;<center><h class="h11"><b>என் &nbsp;புகைப்படங்கள்</b></h></center>&nbsp;&nbsp;
   
 <br>
@@ -262,96 +262,96 @@ p9 { font-size: 12px; color: #ffffff; margin: 0;}
 <br>
 
 <div class="gallery">
-    <img src="VISHNUPIC1\1.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\2.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\3.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\4.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\19.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\20.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\21.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\5.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\6.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\7.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\8.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\9.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\10.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\11.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\12.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\13.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\14.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\16.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\17.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\18.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\19.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\20.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\21.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\22.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\23.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\24.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\25.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\26.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\27.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\28.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\29.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\30.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\31.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC1\32.jpeg"  draggable="false" class="gallery-item">
+    <img src="VISHNUPIC1/1.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/2.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/3.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/4.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/19.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/20.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/21.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/5.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/6.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/7.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/8.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/9.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/10.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/11.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/12.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/13.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/14.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/16.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/17.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/18.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/19.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/20.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/21.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/22.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/23.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/24.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/25.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/26.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/27.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/28.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/29.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/30.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/31.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC1/32.jpeg"  draggable="false" class="gallery-item">
 
 
-    <img src="VISHNUPIC2\1.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\2.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\3.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\4.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\5.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\6.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\7.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\8.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\9.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\10.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\11.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\12.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\13.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\14.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\15.jpeg"  draggable="false" class="gallery-item">
-    <img src="VISHNUPIC2\16.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\17.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\18.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\19.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\20.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\21.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\22.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\23.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\24.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\25.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\26.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\27.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\28.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\29.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\30.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\31.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\32.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\33.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\34.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC2\35.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/1.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/2.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/3.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/4.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/5.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/6.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/7.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/8.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/9.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/10.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/11.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/12.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/13.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/14.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/15.jpeg"  draggable="false" class="gallery-item">
+    <img src="VISHNUPIC2/16.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/17.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/18.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/19.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/20.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/21.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/22.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/23.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/24.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/25.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/26.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/27.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/28.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/29.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/30.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/31.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/32.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/33.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/34.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC2/35.jpg" draggable="false"  class="gallery-item">
     
-    <img src="VISHNUPIC3\1.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\2.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\3.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\4.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\5.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\6.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\7.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\8.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\9.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\10.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\11.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\12.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\13.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\14.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\15.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\16.jpeg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\17.jpg" draggable="false"  class="gallery-item">
-    <img src="VISHNUPIC3\18.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/1.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/2.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/3.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/4.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/5.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/6.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/7.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/8.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/9.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/10.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/11.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/12.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/13.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/14.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/15.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/16.jpeg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/17.jpg" draggable="false"  class="gallery-item">
+    <img src="VISHNUPIC3/18.jpg" draggable="false"  class="gallery-item">
     
 </div> 
 
@@ -401,7 +401,7 @@ p9 { font-size: 12px; color: #ffffff; margin: 0;}
 </div>        
 
 <div class="center-content">
-<center><img class="FLOGOIMG" src="LOGO\VISHNUPEDIA LOGO.png" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
+<center><img class="FLOGOIMG" src="LOGO/VISHNUPEDIA LOGO.png" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
 </div>
 
 <div class="right-content">  
@@ -410,13 +410,13 @@ p9 { font-size: 12px; color: #ffffff; margin: 0;}
 <center>
 <br>
 <ul class="Connect">
-<li style="display: inline-block; margin-right: 10px;"> <a href="mailto:vishnupedia1999@gmail.com"> <img class="CONIMG" src="SOCIAL MEDIA\MAIL.gif" width="75" height="75" alt="EMAIL"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="mailto:vishnupedia1999@gmail.com"> <img class="CONIMG" src="SOCIAL MEDIA/MAIL.gif" width="75" height="75" alt="EMAIL"> </a> </li>
 &nbsp;
-<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.linkedin.com/in/rvkadventurer1221/"> <img class="CONIMG" src="SOCIAL MEDIA\LINKEDIN.gif" width="75" height="75" alt="LINKEDIN"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.linkedin.com/in/rvkadventurer1221/"> <img class="CONIMG" src="SOCIAL MEDIA/LINKEDIN.gif" width="75" height="75" alt="LINKEDIN"> </a> </li>
 &nbsp;
-<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.instagram.com/rvk_cyclist_adventurer_lovedog/?hl=en"> <img class="CONIMG" src="SOCIAL MEDIA\INSTAGRAM.gif" width="75" height="75" alt="INSTAGRAM"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.instagram.com/rvk_cyclist_adventurer_lovedog/?hl=en"> <img class="CONIMG" src="SOCIAL MEDIA/INSTAGRAM.gif" width="75" height="75" alt="INSTAGRAM"> </a> </li>
 &nbsp;
-<li style="display: inline-block; margin-right: 10px;"> <a href="https://m.facebook.com/profile.php?eav=AfaXkPNZkofAnD_7vEQzmJkzrhno69WrpxTdpJslfbg7rVHL2r0tpUcAbvwDhDP5hf8&paipv=0"> <img class="CONIMG" src="SOCIAL MEDIA\FACEBOOK.gif" width="75" height="75" alt="FACEBOOK"> </a> </li>
+<li style="display: inline-block; margin-right: 10px;"> <a href="https://m.facebook.com/profile.php?eav=AfaXkPNZkofAnD_7vEQzmJkzrhno69WrpxTdpJslfbg7rVHL2r0tpUcAbvwDhDP5hf8&paipv=0"> <img class="CONIMG" src="SOCIAL MEDIA/FACEBOOK.gif" width="75" height="75" alt="FACEBOOK"> </a> </li>
 </ul>
 </center>
 </div>
