--- a/career.html
+++ b/career.html
@@ -354,7 +354,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 <br>
 <p class="p1">
-  YouTube வீடியோக்கள் மற்றும் இணையதள உள்ளடக்கம் உட்பட மற்றும் போட்டியாளர்களின் ஆன்லைன் இருப்பு மூலமாகவும், தொழில் சார்ந்த தரவு மற்றும் வாடிக்கையாளர் கருத்துக்களை மதிப்பாய்வு செய்வதன் மூலமாகவும் விரிவான பகுப்பாய்வு செய்தேன். போட்டியாளர் டாஷ்போர்டுகள் மற்றும் அறிக்கை வடிவமைப்புகளின் ஸ்கிரீன் ஷாட்களைப் படம்பிடித்து ஆவணப்படுத்துவது, மதிப்பாய்வு இணையதளங்களில் இருந்து தகவல்களைச் சேகரிப்பது ஆகியவை இதில் அடங்கும். தொழில்துறை போக்குகள், போட்டியாளர் கருவிகளின் பலம் மற்றும் பலவீனங்களை கண்டறிவதே எனது குறிக்கோள், மூலோபாய முடிவுகளை தெரிவிக்கவும், எங்கள் சந்தை நிலையை மேம்படுத்தவும் இது உதவியது
+  YouTube வீடியோக்கள் மற்றும் இணையதள உள்ளடக்கம் உட்பட மற்றும் போட்டியாளர்களின் ஆன்லைன் இருப்பு மூலமாகவும், தொழில் சார்ந்த தரவு மற்றும் வாடிக்கையாளர் கருத்துக்களை மதிப்பாய்வு செய்வதன் மூலமாகவும் விரிவான பகுப்பாய்வு செய்தேன். போட்டியாளர் டாஷ்போர்டுகள் மற்றும் அறிக்கை வடிவமைப்புகளின் ஸ்கிரீன் ஷாட்களைப் படம்பிடித்து ஆவணப்படுத்துவது, மதிப்பாய்வு இணையதளங்களில் இருந்து தகவல்களைச் சேகரிப்பது ஆகியவை இதில் அடங்கும். தொழில்துறை போக்குகள், போட்டியாளர் கருவிகளின் பலம் மற்றும் பலவீனங்களை கண்டறிவதே எனது குறிக்கோள், மூலோபாய முடிவுகளை எடுக்கவும், எங்கள் சந்தை நிலையை மேம்படுத்தவும் இது உதவியது
 </p>
 <br>
 </center>
