--- a/gallery.html
+++ b/gallery.html
@@ -215,7 +215,16 @@ p9 { font-size: 12px; color: #ffffff; margin: 0;}
 
 </style>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q32X39Q8MC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-Q32X39Q8MC');
+</script>
+        
 </head>
 
 <body oncontextmenu="return false">
