--- a/knowledge.html
+++ b/knowledge.html
@@ -271,6 +271,15 @@ table.APPS {border-spacing: 10px;}
 
 </style>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q32X39Q8MC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q32X39Q8MC');
+</script>
 
 </head>
 
