--- a/gallery.html
+++ b/gallery.html
@@ -426,6 +426,8 @@ p9 { font-size: 12px; color: #ffffff; margin: 0;}
 <li style="display: inline-block; margin-right: 10px;"> <a href="https://www.instagram.com/rvk_cyclist_adventurer_lovedog/?hl=en"> <img class="CONIMG" src="SOCIAL MEDIA/INSTAGRAM.gif" width="75" height="75" alt="INSTAGRAM"> </a> </li>
 &nbsp;
 <li style="display: inline-block; margin-right: 10px;"> <a href="https://m.facebook.com/profile.php?eav=AfaXkPNZkofAnD_7vEQzmJkzrhno69WrpxTdpJslfbg7rVHL2r0tpUcAbvwDhDP5hf8&paipv=0"> <img class="CONIMG" src="SOCIAL MEDIA/FACEBOOK.gif" width="75" height="75" alt="FACEBOOK"> </a> </li>
+&nbsp;
+<li style="display: inline-block; margin-right: 10px;"> <a href="https://www.youtube.com/@RVKAdventurer"> <img class="CONIMG" src="SOCIAL MEDIA/YOUTUBE.gif" width="75" height="75" alt="YOUTUBE"> </a> </li>
 </ul>
 </center>
 </div>
