--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ table.FRIEND {margin: 0; border-spacing: 0;}
 
 <main>
 <div class="header-images">
-<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" draggable="false" >
+<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" style="filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.5));" draggable="false" >
 
 </div>
 
