--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ table.FRIEND {margin: 0; border-spacing: 0;}
 
 <main>
 <div class="header-images">
-<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" style="filter: drop-shadow(0px 0px 6px rgba(255, 255, 255, 0.8));" draggable="false" >
+<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" style="filter: drop-shadow(0 0 12px rgba(255, 0, 0, 0.9));" draggable="false" >
 
 </div>
 
