--- a/career.html
+++ b/career.html
@@ -266,7 +266,7 @@ table.FULL {border-spacing: 10px;}
 <main>
 
 <div class="header-images">
-<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" draggable="false" >
+<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" style="filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.9));" draggable="false" >
 </div>
 
 <div class="tabcontainer">
