--- a/knowledge.html
+++ b/knowledge.html
@@ -313,7 +313,7 @@ table.APPS {border-spacing: 10px;}
 <main>
 
 <div class="header-images">
-<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" style="filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.9));" draggable="false">
+<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" alt="RVK, Raj. Vishnu Kumar, RVK Adventurer, Vishnupedia, Vishnu Kumar, விஷ்ணு குமார், விஷ்ணுபீடியா" style="filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.9));" draggable="false">
 </div>
 
 <div class="tabcontainer">
@@ -1176,7 +1176,7 @@ table.APPS {border-spacing: 10px;}
 </div>        
 
 <div class="center-content">
-<center><img class="FLOGOIMG" src="LOGO/VISHNUPEDIA LOGO.png" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
+<center><img class="FLOGOIMG" src="LOGO/VISHNUPEDIA LOGO.png" alt="RVK, Raj. Vishnu Kumar, RVK Adventurer, Vishnupedia, Vishnu Kumar, விஷ்ணு குமார், விஷ்ணுபீடியா" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
 </div>
 
 <div class="right-content">  
