--- a/index.html
+++ b/index.html
@@ -6,17 +6,32 @@
 <meta charset="UTF-8">
 <meta property="og:title" content="விஷ்ணுபீடியா">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
-<meta property="og:image" content="LOGO/VISHNUPEDIA1.jpg">
+<meta name="description" content="விஷ்ணுபீடியா என்பது ராஜ் விஷ்ணு குமாரின் வாழ்க்கை பயணத்தின் சிறு தொகுப்பு. இதில் அவரது பயணம், திறன்கள், கல்வி, அனுபவம், காலக்கோடு மற்றும் விருப்பங்களை அழகாக காணலாம்.">
+<meta property="og:image" content="https://vishnupedia.github.io/tamil/LOGO/VISHNUPEDIA1.jpg">
+<meta property="og:image:type" content="image/jpeg">  
 <meta property="og:image:width" content="1080">
 <meta property="og:image:height" content="1080">
 <meta property="og:url" content="https://vishnupedia.github.io/tamil/">
 <meta property="og:type" content="website">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="Raj Vishnu Kumar, RVK Adventurer, Vishnupedia, விஷ்ணு குமார், விஷ்ணுபீடியா, Personal Portfolio, Biography, Coimbatore, Tamilan, Vishnu Kumar, YouTuber"> 
+
 <link rel="apple-touch-icon" sizes="180x180" href="LOGO/FAVICON.png">
 <link rel="icon" href="LOGO/FAVICON.ico" type="image/x-icon">
+<link rel="canonical" href="https://vishnupedia.github.io/tamil/">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "விஷ்ணுபீடியா",
+  "url": "https://vishnupedia.github.io/tamil/",
+  "description": "விஷ்ணுபீடியா என்பது ராஜ் விஷ்ணு குமாரின் வாழ்க்கை பயணத்தின் சிறு தொகுப்பு. இதில் அவரது பயணம், திறன்கள், கல்வி, அனுபவம், காலக்கோடு மற்றும் விருப்பங்களை அழகாக காணலாம்.",
+  "publisher": {"@type": "Person", "name": "ராஜ் விஷ்ணு குமார்"}
+}
+</script>
 
+    
 <style>
 
 /*BODY__________________________*/
