--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@
 <meta charset="UTF-8">
 <meta property="og:title" content="விஷ்ணுபீடியா">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
-<meta property="og:image" content="LOGO/VISHNUPEDIA1.jpg">
+<meta name="description" content="விஷ்ணுபீடியாவின் புகைப்படப் பக்கத்தில் ராஜ் விஷ்ணு குமாரின் அற்புதமான படங்கள் மற்றும் வீடியோக்களைக் காணலாம்.">
+<meta property="og:image" content="https://vishnupedia.github.io/tamil/LOGO/VISHNUPEDIA1.jpg">
 <meta property="og:image:width" content="1080">
 <meta property="og:image:height" content="1080">
 <meta property="og:url" content="https://vishnupedia.github.io/tamil/">
